# Notes-FastAPI

./: main.py  pyproject.toml
config/: config.yaml
src/: models.py
src/repository/: notes.py  users.py
src/routes/: notes.py  users.py
src/schemas/: notes.py  users.py
