[tool.poetry]
name = "notes-fistapi"
version = "0.1.0"
description = ""
authors = ["Michail Kravchenko <66253910+kravchenmd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "notes_fistapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
